--- a/src/components/customization-select/customization-select.scss
+++ b/src/components/customization-select/customization-select.scss
@@ -1,5 +1,8 @@
 .customization__select {
     width: 90%;
+    @media (max-width: $tablet) {
+        width: 100%;
+    }
     &-container {
         display: flex;
         align-items: center;
