--- a/src/templates/valve-controller/filter-tabs/customization/customization.pug
+++ b/src/templates/valve-controller/filter-tabs/customization/customization.pug
@@ -17,4 +17,4 @@
                 include ./system-setup/system-setup  
 
             .customization__tab-pane(data-tab-content='installerSetup')
-                p Настройка монтажника
+                include ./installer-setup/installer-setup  
