--- a/src/templates/valve-controller/filter-tabs/customization/general/customization-info/customization-info.pug
+++ b/src/templates/valve-controller/filter-tabs/customization/general/customization-info/customization-info.pug
@@ -1,6 +1,6 @@
 .customization__info
     .customization__info-container 
-        +customizationInput('Время клапана', '16:07')
-        +customizationInput('Время промывки', '01:00')
-        +customizationInput('Жесткость', '6.0')
-        +customizationInput('Дней между промывками', '5')
+        +customizationInput('Время клапана', '16:07', '16:07')
+        +customizationInput('Время промывки', '01:00', '01:00')
+        +customizationInput('Жесткость', '6.0', '6.0')
+        +customizationInput('Дней между промывками', '5', '5')
