--- a/src/templates/valve-controller/filter-tabs/customization/general/customization-info/customization-info.scss
+++ b/src/templates/valve-controller/filter-tabs/customization/general/customization-info/customization-info.scss
@@ -1,5 +1,8 @@
 .customization__info {
     &-container {
         column-count: 2;
+        @media (max-width: $tablet) {
+            column-count: 1;
+        }
     }
 }
