--- a/src/templates/valve-controller/filter-tabs/filter-tabs.scss
+++ b/src/templates/valve-controller/filter-tabs/filter-tabs.scss
@@ -1,3 +1,4 @@
+@import "./customization/installer-setup/installer-setup.scss";
 @import "./customization/system-setup/system-setup.scss";
 @import "./customization/customization.scss";
 @import "./information/information.scss";
