--- a/src/templates/valve-controller/filter-tabs/customization/installer-setup/installer-setup.pug
+++ b/src/templates/valve-controller/filter-tabs/customization/installer-setup/installer-setup.pug
@@ -24,3 +24,5 @@
 
     .installer-setup__btn 
         +button('Сброс по объёму')
+
+    include ./installer-setup-pagination/installer-setup-pagination
