--- a/src/templates/client-profile/client-profile.pug
+++ b/src/templates/client-profile/client-profile.pug
@@ -13,6 +13,6 @@
         .client-profile__comment 
             .form__block
                 .form__textarea
-                    +input({type: 'textarea', placeholder: 'Ваше комментарии'})
+                    +input({type: 'textarea', placeholder: 'Ваши комментарии'})
         .client-profile__save 
             +transparentBtnProfile('Сохранить')
