--- a/src/components/chart-first/chart-first.pug
+++ b/src/components/chart-first/chart-first.pug
@@ -4,5 +4,5 @@
             h2.chart__title Расход воды, л/мин
             canvas(id="chart-warer-flow")
         .chart__right.--resource
-            h2.chart__title Оставшийся ресурс
+            //- h2.chart__title Оставшийся ресурс
             canvas(id="chart-resource")
