--- a/src/templates/valve-controller/filter-tabs/filter-tabs.scss
+++ b/src/templates/valve-controller/filter-tabs/filter-tabs.scss
@@ -12,6 +12,10 @@
     }
     &__nav-tabs {
         position: relative;
+        @media (max-width: $tablet) {
+            overflow-x: scroll;
+            height: 50px;
+        }
         &::after {
             position: absolute;
             top: 45px;
@@ -20,6 +24,9 @@
             width: 100%;
             height: 1px;
             background-color: #e0e0e7;
+            @media (max-width: $tablet) {
+                display: none;
+            }
         }
     }
     &__title-item {
@@ -65,6 +72,9 @@
         width: 100%;
         display: none;
         padding-top: 35px;
+        @media (max-width: $phone) {
+            padding-top: 0;
+        }
         &.active {
             display: block;
         }
