--- a/src/templates/valve-controller/valve-controller.scss
+++ b/src/templates/valve-controller/valve-controller.scss
@@ -66,11 +66,26 @@
         &-tabs {
             display: flex;
             align-items: center;
+            @media (max-width: $phoneBig) {
+                flex-direction: column;
+            }
         }
         &-title {
             margin-right: 40px;
             font-weight: 300;
             font-size: 26px;
+            @media (max-width: $tablet) {
+                font-size: 20px;
+                margin-right: 15px;
+            }
+            @media (max-width: $phoneBig) {
+                flex-direction: column;
+                margin-right: 0;
+                margin-bottom: 25px;
+            }
+            @media (max-width: $phoneSmall) {
+                margin-bottom: 15px;
+            }
         }
     }
     &__nav {
@@ -113,7 +128,9 @@
         width: 100%;
         display: none;
         padding-top: 35px;
-        // overflow: hidden;
+        @media (max-width: $tablet) {
+            overflow: hidden;
+        }
         &.active {
             display: block;
         }
