update all project

--- a/src/components/components.pug
+++ b/src/components/components.pug
@@ -1,6 +1,7 @@
 include ./customization-select/customization-select
 include ./customization-input/customization-input
 include ./transparent-btn/transparent-btn
+include ./warning-text/warning-text
 include ./hamburger/hamburger
 include ./checkbox/checkbox
 include ./input/input
