--- a/src/components/customization-select/customization-select.pug
+++ b/src/components/customization-select/customization-select.pug
@@ -12,7 +12,7 @@ mixin customizationSelect(title, selectHeadTitle, ...values)
 
 mixin customizationSelectTypes(title, selectHeadTitle, ...values)
     .customization__select.system-setup__types-select
-        .customization__select-container
+        .customization__select-container.system-setup__types-container
             p= title
             .form__wrapper
             .form__label.form__select.system-setup__types-label
