--- a/src/templates/valve-controller/filter-tabs/customization/installer-setup/installer-setup-pagination/installer-setup-pagination.pug
+++ b/src/templates/valve-controller/filter-tabs/customization/installer-setup/installer-setup-pagination/installer-setup-pagination.pug
@@ -3,4 +3,4 @@
         .installer-setup-pagination__btns 
             +button('Применить')
         .installer-setup-pagination__warning
-            p Изменение данных настроек может привести к некорректной работе фильтра и резкому ухудшению качества воды. Пожалуйста, не изменяйте их без консультации со специалистами компании Экодар.
+            +warningText()
