--- a/src/templates/valve-controller/filter-tabs/customization/system-setup/system-setup-pagination/system-setup-pagination.pug
+++ b/src/templates/valve-controller/filter-tabs/customization/system-setup/system-setup-pagination/system-setup-pagination.pug
@@ -3,4 +3,4 @@
         .system-setup__pagination-btns 
             +button('Применить')
         .system-setup__pagination-warning
-            p Изменение данных настроек может привести к некорректной работе фильтра и резкому ухудшению качества воды. Пожалуйста, не изменяйте их без консультации со специалистами компании Экодар.
+            +warningText()
