--- a/src/templates/valve-controller/filter-tabs/customization/general/general-pagination/general-pagination.scss
+++ b/src/templates/valve-controller/filter-tabs/customization/general/general-pagination/general-pagination.scss
@@ -2,8 +2,19 @@
     &__btns {
         display: flex;
         margin-right: 35px;
+        @media (max-width: $phone) {
+            flex-direction: column;
+        }
+        @media (max-width: $tabletWide) {
+            margin-right: 0px;
+        }
         & button {
             width: 180px;
+            @media (max-width: $phone) {
+                margin-bottom: 20px;
+                width: 100%;
+                max-width: 180px;
+            }
             &:first-child {
                 margin-right: 25px;
             }
@@ -14,8 +25,18 @@
         align-items: center;
         justify-content: space-between;
         margin: 40px 0 40px;
+        @media (max-width: $tabletWide) {
+            flex-direction: column;
+        }
     }
     &__warning {
         font-size: 13px;
+        & p {
+            text-align: center;
+            margin-top: 25px;
+            @media (max-width: $phoneSmall) {
+                margin-top: 15px;
+            }
+        }
     }
 }
