--- a/src/templates/valve-controller/filter-tabs/customization/installer-setup/installer-setup-pagination/installer-setup-pagination.scss
+++ b/src/templates/valve-controller/filter-tabs/customization/installer-setup/installer-setup-pagination/installer-setup-pagination.scss
@@ -2,10 +2,17 @@
     &__btns {
         display: flex;
         margin-right: 35px;
+        @media (max-width: $tablet) {
+            margin-right: 0px;
+        }
         & button {
             width: 180px;
             &:first-child {
                 margin-right: 25px;
+                @media (max-width: $tablet) {
+                    margin-right: 0;
+                    margin-bottom: 15px;
+                }
             }
         }
     }
@@ -14,8 +21,14 @@
         align-items: center;
         justify-content: space-between;
         margin: 50px 0 40px;
+        @media (max-width: $tablet) {
+            flex-direction: column;
+        }
     }
     &__warning {
         font-size: 13px;
+        & p {
+            text-align: center;
+        }
     }
 }
