--- a/src/templates/valve-controller/filter-tabs/customization/сonfiguration/configuration-pagination/configuration-pagination.pug
+++ b/src/templates/valve-controller/filter-tabs/customization/сonfiguration/configuration-pagination/configuration-pagination.pug
@@ -4,4 +4,4 @@
             +button('Применить')
             +transparentBtn('Сброс до заводских настроек')
         .configuration-pagination__warning
-            p Изменение данных настроек может привести к некорректной работе фильтра и резкому ухудшению качества воды. Пожалуйста, не изменяйте их без консультации со специалистами компании Экодар.
+            +warningText()
