add otbor prob content

--- a/src/templates/valve-controller/filter-tabs/customization/сonfiguration/customization-info/customization-info.pug
+++ b/src/templates/valve-controller/filter-tabs/customization/сonfiguration/customization-info/customization-info.pug
@@ -1,11 +1,11 @@
 .customization__info
     .customization__info-container
-        +customizationSelect('Тип клапана', '1.0', '2.0', '3.0')
-        +customizationSelect('Настройка режима работы внешнего клапана 1', 'Выкл', 'Выкл', 'Вкл')
+        +customizationSelect('Тип клапана', '1.0', '1.25', '1.5', '2.0', '1.0T')
+        +customizationSelect('Настройка режима работы внешнего клапана 1', 'Выкл', 'Выкл', 'Без байпаса', 'Клапан А', 'Клапан Б', 'Системный контроллер')
         +customizationSelect('Промывка перед возвращением в сервис', 'Выкл', 'Выкл', 'Вкл')
-        +customizationSelect('Внешний сигнал', 'Выкл', 'Выкл', 'Вкл')
-        +customizationSelect('Заполнение реагентного бака, единицы измерения', 'кг', 'кг', 'гр', 'мг', 'мкг')
-        +customizationSelect('Тип счетчика', '1.0', '2.0', '3.0')
+        +customizationSelect('Внешний сигнал', 'Выкл', 'Выкл', 'Немедленная промывка', 'Отложенная промывка', 'Запрет промывки')
+        +customizationSelect('Заполнение реагентного бака, единицы измерения', 'кг', 'кг', 'мин')
+        +customizationSelect('Тип счетчика', '1.0', '1.25', '1.5', '2.0', '3.0', '1.0R', '1.0T')
         +customizationSelect('Тип счетчика', '1.0', '2.0', '3.0')
         +customizationSelect('Отложенное завершение промывки', 'Выкл', 'Выкл', 'Вкл')
         +customizationSelect('Настройка режима работы (дополнительного) внешнего клапана 2', 'Выкл', 'Выкл', 'Вкл')
