add mobile menu

--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -1,9 +1,11 @@
 @import "./customization-select/customization-select.scss";
 @import "./customization-input/customization-input.scss";
 @import "./transparent-btn/transparent-btn.scss";
+@import "./mobile-menu/mobile-menu.scss";
 @import "./checkNumber/checkNumber.scss";
 @import "./checkbox/checkbox.scss";
 @import "./breadcrumbs/breadcrumbs.scss";
+@import "./btn-close/btn-close.scss";
 @import "./hamburger/hamburger.scss";
 @import "./checkbox/checkbox.scss";
 @import "./tooltip/tooltip.scss";
@@ -12,6 +14,7 @@
 @import "./avatar/avatar.scss";
 @import "./models/models.scss";
 @import "./input/input.scss";
+@import "./popup/popup.scss";
 @import "./input/input.scss";
 @import "./table/table.scss";
 @import "./chart/chart.scss";
