--- a/src/index.pug
+++ b/src/index.pug
@@ -9,6 +9,7 @@ body
         main.main 
             include ./templates/header/header
             include ./templates/tabs/tabs
+            include ./components/popup/popup
 
     script(src="../index.js") 
 
