--- a/src/templates/header/header.pug
+++ b/src/templates/header/header.pug
@@ -1,7 +1,7 @@
 header.header
     .header__container.container
         .header__start 
-            a(href="tel:+88007756702" class="header__start-tel") 8 (800) 775 67 02
+            a(href="tel:+78007756702" class="header__start-tel") +7 (800) 775 67 02
             p.header__start-subtitle Руководство пользователя
         .header__middle
             img(src="/images/common/logo.png", alt="Логотип" class="header__logo")
