--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -1,6 +1,7 @@
 @import "./customization-select/customization-select.scss";
 @import "./customization-input/customization-input.scss";
 @import "./transparent-btn/transparent-btn.scss";
+@import "./circle-chart/circle-chart.scss";
 @import "./mobile-menu/mobile-menu.scss";
 @import "./checkNumber/checkNumber.scss";
 @import "./checkbox/checkbox.scss";
