add mobile menu

--- a/src/components/chart/chart.scss
+++ b/src/components/chart/chart.scss
@@ -8,26 +8,26 @@
                 margin-bottom: 0px;
             }
         }
-        @media (max-width: $tablet) {
+        @media (max-width: $tabletWide) {
             flex-direction: column;
         }
     }
     &__left {
         width: 47%;
-        @media (max-width: $tablet) {
+        @media (max-width: $tabletWide) {
             width: 100%;
             margin-bottom: 30px;
         }
     }
     &__right {
         width: 47%;
-        @media (max-width: $tablet) {
+        @media (max-width: $tabletWide) {
             width: 100%;
         }
         &.--resource {
             width: 33%;
             margin: 35px 0px 0px 70px;
-            @media (max-width: $tablet) {
+            @media (max-width: $tabletWide) {
                 width: 55%;
                 margin: 0;
             }
@@ -40,7 +40,7 @@
     &__title {
         font-weight: 300;
         margin-bottom: 25px;
-        @media (max-width: $tablet) {
+        @media (max-width: $tabletWide) {
             font-size: 18px;
             text-align: center;
         }
