add mobile menu

--- a/src/components/circle-chart/circle-chart.pug
+++ b/src/components/circle-chart/circle-chart.pug
@@ -1,7 +1,7 @@
 .circle-chart__container
     .circle-chart__info 
         p Остаток 70%
-        p Остаток 30%
+        p Расход 30%
     svg.chart-container(width='200', height='200')
         circle.back(cx='100', cy='100', r='90', fill='none')
         circle.front(cx='100', cy='100', r='90', fill='none')
