--- a/src/templates/valve-controller/filter-tabs/customization/installer-setup/installer-setup.pug
+++ b/src/templates/valve-controller/filter-tabs/customization/installer-setup/installer-setup.pug
@@ -14,7 +14,7 @@
         +customizationInput('Время промывки', '01:00', '01:00')
         +customizationInput('Дней между промывками', '5', '5')
         +customizationInput('Настройка телефона компании', '232-52-62', '232-52-62')
-        +customizationSelect('Сервис', 'Выкл', 'Выкл', 'Вкл')
+        +customizationSelect('Сервис', 'Выкл', 'Выкл', 'По времени', 'По объёму', 'По времени и объёму')
     
     .installer-setup__btn 
         +button('Сброс по времени')
