--- a/src/templates/valve-controller/filter-tabs/customization/installer-setup/installer-setup.scss
+++ b/src/templates/valve-controller/filter-tabs/customization/installer-setup/installer-setup.scss
@@ -10,9 +10,11 @@
         }
     }
     &__columns {
-        column-count: 2;
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
         @media (max-width: $tablet) {
-            column-count: 1;
+            flex-direction: column;
         }
     }
     &__nav {
