--- a/src/templates/valve-controller/filter-tabs/customization/сonfiguration/customization-info/customization-info.pug
+++ b/src/templates/valve-controller/filter-tabs/customization/сonfiguration/customization-info/customization-info.pug
@@ -6,9 +6,8 @@
         +customizationSelect('Внешний сигнал', 'Выкл', 'Выкл', 'Немедленная промывка', 'Отложенная промывка', 'Запрет промывки')
         +customizationSelect('Заполнение реагентного бака, единицы измерения', 'кг', 'кг', 'мин')
         +customizationSelect('Тип счетчика', '1.0', '1.25', '1.5', '2.0', '3.0', '1.0R', '1.0T')
-        +customizationSelect('Тип счетчика', '1.0', '2.0', '3.0')
         +customizationSelect('Отложенное завершение промывки', 'Выкл', 'Выкл', 'Вкл')
-        +customizationSelect('Настройка режима работы (дополнительного) внешнего клапана 2', 'Выкл', 'Выкл', 'Вкл')
-        +customizationSelect('Единицы жесткости', 'мг-экв/л', 'мг-экв/л')
+        +customizationSelect('Настройка режима работы (дополнительного) внешнего клапана 2', 'Выкл', 'Выкл', 'Без байпаса', 'Промывка чистой водой / полная', 'Защита от протечек')
+        +customizationSelect('Единицы жесткости', 'мг-экв/л', 'мг-экв/л', 'fH', 'dH')
 
 
