--- a/src/templates/valve-controller/filter-tabs/filter-tabs.pug
+++ b/src/templates/valve-controller/filter-tabs/filter-tabs.pug
@@ -5,7 +5,7 @@
             a.filter-tabs__nav-tab(href='#', data-tab='statistics') Статистика
             a.filter-tabs__nav-tab(href='#', data-tab='flushing') Промывка
             a.filter-tabs__nav-tab(href='#', data-tab='customization') Настройка
-            a.filter-tabs__nav-tab(href='#', data-tab='archive') Архив
+            a.filter-tabs__nav-tab.disabled(href='#', data-tab='archive') Архив
             a.filter-tabs__nav-tab(href='#', data-tab='warnings') Предупреждения
                 
         .filter-tabs__tab-content
