--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -261,94 +261,6 @@
         & + .form__select {
             margin-top: 18px;
         }
-        &.--warn {
-            & .form__warn {
-                opacity: 1;
-                transform: translate3d(0, 100%, 0);
-            }
-        }
-        &.--value,
-        &.--focused {
-            z-index: 1;
-            border-color: $border_inputV;
-            background-color: transparent;
-            & .form__placeholder {
-                opacity: 0;
-                pointer-events: none;
-            }
-            &.--phone {
-                & .form__input {
-                    opacity: 1;
-                }
-            }
-            &.--search {
-                background-color: #fff;
-            }
-        }
-        &.--error {
-            border-color: $error;
-        }
-        &.--phone {
-            & .form__input {
-                opacity: 0;
-                transition: opacity $transition;
-            }
-        }
-        &.--search {
-            border-right: unset;
-            border-top-right-radius: unset;
-            border-bottom-right-radius: unset;
-            border-top: 1px solid transparent;
-            border-left: 1px solid transparent;
-            border-bottom: 1px solid transparent;
-            background-color: transparent;
-            & .form__input {
-                height: 34px;
-                padding: 12px 142px 12px 20px;
-                @media (max-width: $tablet) {
-                    padding-right: 120px;
-                }
-            }
-            & .form__placeholder {
-                top: 5px;
-            }
-        }
-        &.--cities {
-            display: flex;
-            & [name="search"] {
-                border: 1px solid $bg_gray;
-            }
-            & .form__search {
-                height: 38px;
-                padding-right: 115px;
-                border: 1px solid $bg_gray;
-            }
-            & .form__placeholder {
-                top: 5px;
-            }
-            & .form__label-close {
-                right: 77px;
-            }
-            & .form__button {
-                cursor: pointer;
-                position: relative;
-                width: 60px;
-                min-width: 60px;
-                padding: 0;
-                border-top: 1px solid $bg_gray;
-                border-right: 1px solid $bg_gray;
-                border-bottom: 1px solid $bg_gray;
-                &:hover {
-                    & .form__button-icon {
-                        fill: $activeOrange;
-                    }
-                }
-                &-icon {
-                    @extend %absoluteCenter;
-                    transition: fill $transition;
-                }
-            }
-        }
         &-close {
             position: absolute;
             top: 50%;
@@ -521,12 +433,10 @@
                 transform: none;
                 pointer-events: unset;
                 max-width: 375px;
-                border-radius: 0px 0px 7px 6px;
-
                 max-height: 247px;
-                // overflow: hidden;
-                // overflow-y: hidden;
-                // overflow-y: scroll;
+                border-radius: 0px 0px 7px 6px;
+                overflow: hidden;
+                overflow: scroll;
             }
         }
         &.--selected {
@@ -546,6 +456,8 @@
             display: block;
             position: relative;
 
+            overflow: hidden;
+            white-space: nowrap;
             text-align: center;
             width: 110px;
             max-width: 100%;
@@ -577,16 +489,17 @@
                 // Custom overflow
                 content: "";
                 display: block;
-                width: 22px;
-                height: 14px;
+                width: 35px;
+                height: 22px;
                 position: absolute;
-                background-color: white;
-                top: 36%;
-                right: 1px;
+                top: 31%;
+                right: 0px;
+                background: linear-gradient(90deg, rgba(0, 165, 233, 0) 13%, rgb(255, 255, 255) 46%);
             }
         }
         &-list {
-            position: absolute;
+            opacity: 0;
+
             width: 100%;
             max-width: 100%;
             font-size: 14px;
@@ -595,18 +508,20 @@
             border: 1px solid $bg_gray;
             border-radius: 2px;
             background-color: #fff;
-            opacity: 0;
+            box-shadow: $shadow;
+
             transform: translate3d(0, 20px, 0);
             transition: transform $transition, opacity $transition;
-            box-shadow: $shadow;
             will-change: opacity, transform;
             pointer-events: none;
             cursor: pointer;
             z-index: 11;
+
             overflow: hidden;
             overflow-y: scroll;
         }
         &-item {
+            word-wrap: inherit;
             margin-top: 0px !important;
             padding: 12px;
             text-align: center;
