--- a/src/templates/valve-controller/filter-tabs/customization/system-setup/system-setup.scss
+++ b/src/templates/valve-controller/filter-tabs/customization/system-setup/system-setup.scss
@@ -23,9 +23,14 @@
         margin: 30px 0 25px;
     }
     &__container {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        box-sizing: border-box;
+
         column-count: 2;
         @media (max-width: $tablet) {
-            column-count: 1;
+            flex-direction: column;
         }
     }
     &__btn {
