--- a/src/templates/valve-controller/filter-tabs/filter-tabs.scss
+++ b/src/templates/valve-controller/filter-tabs/filter-tabs.scss
@@ -56,18 +56,19 @@
             width: 100%;
             height: 2px;
             opacity: 0;
-            // transform: translateX(-95px);
         }
         &.active {
             transition: $transition;
             color: $black;
             &::after {
-                // transform: translateX(0px);
                 opacity: 1;
             }
         }
         &:hover {
             color: $black;
+            &::after {
+                opacity: 1;
+            }
         }
     }
     &__tab-pane {
